<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_background"
    android:padding="25sp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30sp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/PassThrough"
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:src="@drawable/location"
            android:tint="@color/White">
        </ImageView>

        <Space
            android:layout_width="180sp"
            android:layout_height="5sp">

        </Space>

        <TextView
            android:layout_width="50sp"
            android:layout_height="20sp"
            android:text="Πόλη"
            android:textAlignment="center"
            android:textColor="@color/White"
            android:textStyle="bold"
            android:textSize="15sp">

        </TextView>

        <Switch
            android:id="@+id/VisibilityChanger"
            android:layout_width="50sp"
            android:layout_height="10sp"
            android:layout_gravity="center"
            android:trackTint="@color/White"
            android:thumbTint="@color/White">

        </Switch>

        <TextView
            android:layout_width="50sp"
            android:layout_height="20sp"
            android:text="Συντ."
            android:textColor="@color/White"
            android:textStyle="bold"
            android:textSize="15sp">

        </TextView>

    </LinearLayout>

    <ImageView
        android:layout_width="200sp"
        android:layout_height="200sp"
        android:src="@drawable/main_icon"
        android:layout_gravity="center">

    </ImageView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="FarmWeather"
        android:textSize="40sp"
        android:textColor="@color/White"
        android:gravity="center">
    </TextView>

    <Space
        android:layout_width="380sp"
        android:layout_height="40sp">
    </Space>

    <EditText
        android:id="@+id/GetTown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:inputType="text"
        android:maxLines="1"
        android:digits="AaBbCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWwXxYyZz , ΑαΒβΓγΔδΕεΖζΗηΘθΙιΚκΛλΜμΝνΞξΟοΠπΡρΣσςΤτΦφΧχΨψΩω , ΆάΈέΉήΊίΌόΎύΏώ "
        android:hint="Καταχωρήστε πόλη"
        android:maxLength="15"
        android:textAlignment="center"
        android:textColorHint="@color/White"
        android:textColor="@color/White"
        android:textSize="35sp"
        android:background="@color/transparent"
        android:visibility="visible">

    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:layout_marginBottom="11sp"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/Latitude"
            android:layout_width="160sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="number"
            android:maxLines="1"
            android:digits="0123456789.-"
            android:imeOptions="actionNext"
            android:hint="Πλάτος"
            android:textColorHint="@color/White"
            android:textColor="@color/White"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:background="@color/transparent"
            android:visibility="gone">

        </EditText>

        <Space
            android:layout_width="15sp"
            android:layout_height="5sp">

        </Space>

        <EditText
            android:id="@+id/Longitude"
            android:layout_width="160sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="number"
            android:maxLines="1"
            android:digits="0123456789.-"
            android:imeOptions="actionDone"
            android:hint="Μήκος"
            android:textColorHint="@color/White"
            android:textColor="@color/White"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:background="@color/transparent"
            android:visibility="gone">

        </EditText>

    </LinearLayout>

    <ImageView
        android:id="@+id/enter"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_gravity="center"
        android:src="@drawable/arrow96">
    </ImageView>

    <ImageView
        android:id="@+id/NewAPI"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_gravity="center"
        android:src="@drawable/arrow96"
        android:tint="@color/Blue">

    </ImageView>

</LinearLayout>