<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/HistoryItemList"
        android:title="Ωριαια Προγνωση"
        app:showAsAction="always">
    </item>

    <item
        android:id="@+id/WeatherItemList"
        android:title="Καιρός"
        app:showAsAction="never">

        <menu>

            <item
                android:id="@+id/Clear"
                android:title="Καθαρός">

            </item>

            <item
                android:id="@+id/RainSky"
                android:title="Βροχερός">

            </item>

            <item
                android:id="@+id/Storm"
                android:title="Καταιγίδα">

            </item>

            <item
                android:id="@+id/Sun"
                android:title="Λιακάδα">

            </item>

            <item
                android:id="@+id/Heat"
                android:title="Καύσωνας">

            </item>

            <item
                android:id="@+id/Snow"
                android:title="Χιόνι">

            </item>

            <item
                android:id="@+id/Smoke"
                android:title="Σκόνη">

            </item>

        </menu>

    </item> //List 1

    <item
        android:id="@+id/MonthItemList"
        android:title="Μήνες"
        app:showAsAction="never">

        <menu>

            <item
                android:id="@+id/Month_1"
                android:title="Ιανουάριος">

            </item>

            <item
                android:id="@+id/Month_2"
                android:title="Φεβρουάριος">

            </item>

            <item
                android:id="@+id/Month_3"
                android:title="Μάρτιος">

            </item>

            <item
                android:id="@+id/Month_4"
                android:title="Απρίλιος">

            </item>

            <item
                android:id="@+id/Month_5"
                android:title="Μάιος">

            </item>

            <item
                android:id="@+id/Month_6"
                android:title="Ιούνιος">

            </item>

            <item
                android:id="@+id/Month_7"
                android:title="Ιούλιος">

            </item>

            <item
                android:id="@+id/Month_8"
                android:title="Αύγουστος">

            </item>

            <item
                android:id="@+id/Month_9"
                android:title="Σεπτέμβριος">

            </item>

            <item
                android:id="@+id/Month_10"
                android:title="Οκτώβριος">

            </item>

            <item
                android:id="@+id/Month_11"
                android:title="Νοέμβριος">

            </item>

            <item
                android:id="@+id/Month_12"
                android:title="Δεκέμβριος">

            </item>
        </menu>

    </item> //List 2

    <item
        android:id="@+id/TempItemList"
        android:title="Θερμοκρασία">

        <menu>

            <item
                android:id="@+id/TempList_0_10"
                android:title="0-10">
            </item>

            <item
                android:id="@+id/TempList_11_25"
                android:title="11-25">
            </item>

            <item
                android:id="@+id/TempList26_40"
                android:title="26-40">
            </item>

            <item
                android:id="@+id/TempListUnder0"
                android:title="Κάτω απο 0">
            </item>

            <item
                android:id="@+id/TempListUpper40"
                android:title="Πάνω απο 40">
            </item>

        </menu>

    </item> //List 3

    <item
        android:id="@+id/DeleteItemList"
        android:title="Καθαρισμός όλων">
    </item>//List 4

    <item
        android:id="@+id/ShowAllItemList"
        android:title="Εμφάνιση όλων">
    </item>//List 5

</menu>