<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/False"
        android:title="ΟΧΙ" />

    <item
        android:id="@+id/True"
        android:title="ΝΑΙ" />

</menu>